--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,3 +2,5 @@ PORT=5000
 JWT_SECRET=your-super-secret-jwt-key-change-in-production
 AI_PROVIDER=mock
 OPENAI_API_KEY=sk-your-openai-key-here
+TURSO_DATABASE_URL=libsql://your-database.turso.io
+TURSO_AUTH_TOKEN=your-turso-auth-token
