--- a/backend/package.json
+++ b/backend/package.json
@@ -8,8 +8,8 @@
     "dev": "nodemon src/index.js"
   },
   "dependencies": {
+    "@libsql/client": "^0.5.6",
     "bcryptjs": "^2.4.3",
-    "sql.js": "^1.10.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
